src/objects/ToothCabinet__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tooth Cabinets</relationshipLabel>
        <relationshipName>Tooth_Cabinets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CIM Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tooth Cabinets (Dealer)</relationshipLabel>
        <relationshipName>Tooth_CabinetsDelaer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Created&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToothCabinetId__c</fullName>
        <displayFormat>TC{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Tooth Cabinet Id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Tooth Cabinet</label>
    <nameField>
        <label>Tooth Cabinet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tooth Cabinets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>